--- a/style-projetos.css
+++ b/style-projetos.css
@@ -13,12 +13,6 @@ body {
     margin-left: 20px
 }
 
-h1 {
-    font-size: 50px;
-    text-align: center;
-    color: #38c1a0;
-}
-
 .inteface {
     margin: 1280px;
     margin: 0;
@@ -28,132 +22,6 @@ h1 {
     display: flex;
 }
 
-/* MENU LATERAL */
-
-nav.menu-lateral {
-    width: 60px;
-    height: 100%;
-    background-color: #000000eb;
-    padding: 10px 5px;
-    box-shadow: 3px 0 15px #38c1a0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    transition: .5s;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    z-index: 99999;
-}
-
-nav.menu-lateral.expandir{
-    width: 300px;
-}
-
-.menu-lateral .logo-ue img {
-    width: 105px;
-    height: auto;
-    margin-bottom: 10px;
-}
-
-.btn-expandir {
-    width: 100%;
-    padding-left: 10px;
-}
-
-.btn-expandir > i {
-    font-size: 34px;
-    cursor: pointer;
-}
-
-ul{
-    height: 100%;
-    list-style-type: none;
-}
-
-ul li.item-menu {
-    transition: .2s;
-}
-
-ul li.ativo {
-    background-color: #38c1a0;
-    box-shadow: 0 0 15px #38c1a0;
-}
-
-ul li.item-menu:hover {
-    background-color: #38c1a0;
-    box-shadow: 0 0 15px #2e71c6;
-}
-
-ul li.item-menu a {
-    text-decoration: none;
-    font-size: 18px;
-    padding: 20px 4%;
-    display: flex;
-    line-height: 40px;
-}
-
-ul li.item-menu a .txt-link {
-    color: #fff !important;
-    margin-left: 70px;
-    transition: 1s;
-    opacity: 0;
-}
-
-nav.menu-lateral.expandir .txt-link {
-    margin-left: 40px;
-    opacity: 1;
-}
-
-ul li.item-menu .icon > i {
-    font-size: 30px;
-    margin-left: 30%;
-    color: #fff;
-}
-  
-  .perfil-container {
-    max-width: 1000px;
-    margin: auto;
-    text-align: center;
-    padding: 40px;
-  }
-  
-  .perfil-nav ul {
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    border-bottom: 1px solid #80808021;
-    text-transform: uppercase;
-    font-size: 17px;
-  }
-  
-  .perfil-nav ul li a {
-    padding: 10px;
-    color: #38c1a0;
-    font-weight: bold;
-    text-decoration: none;
-  }
-  
-  .perfil-nav ul li a.active,
-  .perfil-nav ul li a:hover {
-    color: #2e71c6;
-    border-bottom: 3px solid #2e71c6;
-  }
-  
-  .perfil-content {
-    padding: 20px;
-    background: #80808020;
-    border-radius: 12px;
-    margin-top: 20px;
-    text-align: left;
-    display: none;
-  }
-  
-  .mostrado {
-    display: block;
-  }
 
   /* PADRONIZANDO ESTILO */
 
@@ -215,14 +83,28 @@ ul li.item-menu .icon > i {
 
 /* HISTÓRICO */
 
- .historico .status button {
+.historico .status {
   display: flex;
-  justify-self: end;
-  padding: 5px 10px;
+  align-items: center; 
+  justify-content: flex-end; 
+  margin: 0;
+}
+
+.historico .status button {
+  margin: 0;
+  padding: 5px 15px;
   background-color: #28a745;
   color: #fff;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
 }
 
+/* RESPONSIVIDADE */
+
+@media (max-width: 768px) {
+  .planos-container {
+      flex-direction: column;
+  }
+}
   
