--- a/style-cadastro.css
+++ b/style-cadastro.css
@@ -1,51 +1,46 @@
-body {
+*{
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
-    background-color: #000000;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    min-height: 100vh;
-    width: 100vw;
+    box-sizing: border-box;   
 }
 
-
-.logo-container {
+body {
+    background-color: #000;
+    height: 100vh;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #fff;
+    transition: .5s;
     display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
+    justify-content: center; 
+    align-items: center;
+    margin: 200px 0;
 }
 
 .logo{
-    height:130px;
+    height: 90px;
     margin-bottom: 30px;
 }
 
 .container {
     background-color: #80808021;
     border: 2px solid #38c1a0;
-    padding: 60px;
+    padding: 40px;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-    width: 100%;
-    max-width: 400px;
+    max-width: auto;
+    max-height: auto;
+    margin: 4%;
     text-align: center;
 }
 
 .label-float {
     position: relative;
-    margin-bottom: 20px;
-    margin-left: -20px;
-    
+    margin-bottom: 20px; 
 }
 
-
 .label-float input {
-    width: 100%;
+    display: flex;
+    width: 500px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -53,7 +48,42 @@ body {
     background-color: #323232;
     transition: border 0.3s ease;
     color: #38c1a0;
+}
 
+.genero {
+    color: #38c1a0;
+    display: flex;
+    gap: 10px;
+    background-color: #323232;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 500px;
+    height: 42px;
+    align-items: center;
+    padding: 15px;
+    margin-bottom: 20px;
+}
+
+.data input {
+    background-color: #323232;
+    border: none;
+    padding: 8px;
+    color: #fff;
+    width: 320px;
+    font-size: 18px;
+    text-align: right;
+}
+
+.form-row {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 60px;
+    margin-bottom: 20px; 
+}
+
+.form-row .label-float {
+    flex: 1; 
 }
 
 .label-float input:focus {
@@ -100,13 +130,11 @@ i.fa-eye {
 }
 
 .btntest button {
-    padding: 10px 20px;
+    padding: 20px 30px;
     color: #fff;
     font-size: 15px;
     background-color: #38c1a0;
     margin: 10px 10px 0 0;
     border: none;
-}
-.Genero {
-    color: #38c1a0;
+    font-size: 20px;
 }
