--- a/style-planos.css
+++ b/style-planos.css
@@ -39,7 +39,15 @@ h1 {
     color: #e0e0e0;
     border: 3px solid rgba(255, 255, 255, 0.1);
     transition: all 0.4s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+}
+
+.plano ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 20px 0;
 }
 
 .plano:hover {
@@ -60,12 +68,6 @@ h1 {
     margin-bottom: 15px;
 }
 
-.plano ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 20px 0;
-}
-
 .plano ul li {
     margin: 10px 0;
     font-size: 16px;
@@ -80,6 +82,7 @@ h1 {
 }
 
 .btn-plano {
+    align-self: center; 
     padding: 12px 25px;
     background-color: #2e71c6;
     color: white;
@@ -88,11 +91,12 @@ h1 {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
+    margin-top: 20px; 
 }
 
 .btn-plano:hover {
-    background-color: #2e71c6;
-    transform: scale(1.05); 
+    background-color: #1d57a3;
+    transform: scale(1.05);
 }
 
 @media (max-width: 768px) {
