--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
-  display: block; }
+  display: block;
+background-color: #191c24;; }
 
 body {
   margin: 0;
